--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Adding config.py file
+config.py
+
+# Adding additional files
+API_practice.ipynb
+API_practice_2.ipynb
+random_numbers.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
